# Pytorch_revision

./: .gitignore  main.py  pyproject.toml  requirements.txt  tensor_basics.ipynb  workflow_pytorch.ipynb
